--- a/assets/style/index.css
+++ b/assets/style/index.css
@@ -66,7 +66,7 @@ nav a:hover {
 /* Hero Banner Styles */
 
 .hero-banner {
-  background-image: url('/assets/image/kitchen.jpg');
+  background-image: url('../image/kitchen.jpg');
   background-size: cover;
   background-position: center;
   height: 500px;
